-changes to adjustment screens

--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -96,31 +96,31 @@
                 }
                 else if(invTxType==2)
                 {
-                    window.open("SaDamageRecoup?InventoryTxId="+id);
+                        window.open("SaDamageRecoup?InventoryTxId=" + id);
                 }
                 else if(invTxType==3)
                 {
-                    window.open("saOutbound?InventoryTxId="+cellVal);
+                        window.open("saOutbound?InventoryTxId="+id);
                 }
                 else if(invTxType==4)
                 {
-                    window.open("SaRelease?SaCode="+cellVal);
+                        window.open("SaRelease?InventoryTxId=" + id);
                 }
                 else if(invTxType==5)
                 {
-                    window.open("SaExciseDuty?SaCode="+cellVal);
+                        window.open("SaExciseDuty?InventoryTxId=" + id);
                 }
                 else if(invTxType==6)
                 {
-                    window.open("saInternalTransfer?SaCode="+cellVal);
+                        window.open("saInternalTransfer?InventoryTxId=" + id);
                 }
                 else if(invTxType==7)
                 {
-                    window.open("SaStockReceived?SaCode="+cellVal);
+                    window.open("SaStockReceived?InventoryTxId="+id);
                 }
                 else if(invTxType==7)
                 {
-                    window.open("SaStockReceived?SaCode="+cellVal);
+                        window.open("SaStockReceived?InventoryTxId=" + id);
                 }
                 else if(invTxType==8)
                 {
