--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -57,8 +57,8 @@
                    { label: 'CustomerId', name: 'customerId',hidden:true,fixed:true, editable: true,edittype:"text",key:true},
                    { label: 'MbllCustomerNo', name: 'mbllCustomerNo',fixed:true, editable: true,edittype:"text",editrules: { required: true }},
                    { label: 'Licence Number', name: 'licenceNumber',fixed:true, editable: true,width:120, edittype:"text"},
-                   { label: 'Customer Name', name: 'name',fixed:true, editable: true,edittype:"text"},
-                   { label: 'Address', name: 'address',fixed:true, editable: true,width:150, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
+                    { label: 'Customer Name', name: 'name', fixed: true, width: 300, editable: true, edittype: "text" },
+                   { label: 'Address', name: 'address',fixed:true, editable: true,width:200, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
                    { label: 'City', name: 'city',fixed:true,editable: true,width:100,edittype:"text",editoptions: {maxlength: 100} },
                    { label: 'Province', name: 'province',fixed:true,editable: true,width:80, edittype:"text",editoptions: {maxlength: 50} },
                    { label: 'Postal Code', name: 'postalCode',fixed:true,editable: true,width:100, edittype:"text",editoptions: {maxlength: 12} },
