--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -250,7 +250,8 @@
                       $('#dsSlipNumber').val(data.dsSlipNumber);
                       $('#deliveryReqDate').val(data.deliveryReqDate);
                       $('#specialInstructions').val(data.specialInstructions);
-                      $('#Lob').val(data.lob);
+                      $('#Lob').val($.trim(data.lob));
+
                    }
                }  
            });  
