-fixes too css of pages

--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -55,14 +55,14 @@
                         }
                     },
                    { label: 'CustomerId', name: 'customerId',hidden:true,fixed:true, editable: true,edittype:"text",key:true},
-                   { label: 'MbllCustomerNo', name: 'mbllCustomerNo',fixed:true, editable: true,edittype:"text",editrules: { required: true }},
+                   { label: 'MbllCustomerNo', name: 'mbllCustomerNo',fixed:true,width:120, editable: true,edittype:"text",editrules: { required: true }},
                    { label: 'Licence Number', name: 'licenceNumber',fixed:true, editable: true,width:120, edittype:"text"},
                     { label: 'Customer Name', name: 'name', fixed: true, width: 300, editable: true, edittype: "text" },
                    { label: 'Address', name: 'address',fixed:true, editable: true,width:200, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
-                   { label: 'City', name: 'city',fixed:true,editable: true,width:100,edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Province', name: 'province',fixed:true,editable: true,width:80, edittype:"text",editoptions: {maxlength: 50} },
+                   { label: 'City', name: 'city',fixed:true,editable: true,width:120,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Province', name: 'province',fixed:true,editable: true,width:120, edittype:"text",editoptions: {maxlength: 50} },
                    { label: 'Postal Code', name: 'postalCode',fixed:true,editable: true,width:100, edittype:"text",editoptions: {maxlength: 12} },
-                   { label: 'Country', name: 'country',fixed:true,editable: true,width:80, edittype:"text",editoptions: {maxlength: 50} },
+                   { label: 'Country', name: 'country',fixed:true,editable: true,width:120, edittype:"text",editoptions: {maxlength: 50} },
                    { label: 'Contact Name', name: 'contactName',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
                    { label: 'Phone1 Type', name: 'phone1Type',fixed:true,editable: true,edittype:"text",width:120 },
                    { label: 'Phone1', name: 'phone1',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
@@ -70,14 +70,14 @@
                    { label: 'Phone2', name: 'phone2',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
                    { label: 'Phone3 Type', name: 'phone3Type',fixed:true,editable: true,edittype:"text",width:120 },
                    { label: 'Phone3', name: 'phone3',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
-                   { label: 'ContactEmail', name: 'contactEmail',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Call Frequency', name: 'callFrequencyId',fixed:true,editable: true, width:150, edittype:"select",formatter:'select',editoptions: {value:getCallFrequency(),maxlength: 100} },
-                   { label: 'Cdos', name: 'cdosId',fixed:true, width:150,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value: getCdos(),maxlength: 100} },
-                   { label: 'Customer Source', name: 'customerSourceId',fixed:true,width:150,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value:getCustomerSource(),maxlength: 100} },
-                   { label: 'Customer Status Code Navigation', name: 'customerStatusCode',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Customer Type Code Navigation', name: 'customerTypeCode',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Segment', name: 'segmentId',fixed:true, width:150,editable: true, edittype:"select",formatter:'select', editoptions: {value:getSegment(),maxlength: 100} },
-                   { label: 'Territory', name: 'territoryId',fixed:true ,width:150,editable: true, edittype:"select",formatter:'select', editoptions: {value:getTerritory(),maxlength: 100} }
+                   { label: 'ContactEmail', name: 'contactEmail',fixed:true,editable: true, width:200,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Call Frequency', name: 'callFrequencyId',fixed:true,editable: true, width:120, edittype:"select",formatter:'select',editoptions: {value:getCallFrequency(),maxlength: 100} },
+                   { label: 'Cdos', name: 'cdosId',fixed:true, width:60,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value: getCdos(),maxlength: 100} },
+                   { label: 'Customer Source', name: 'customerSourceId',fixed:true,width:120,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value:getCustomerSource(),maxlength: 100} },
+                   { label: 'Customer Status Code Navigation', name: 'customerStatusCode',fixed:true,editable: true, width:200,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Customer Type Code Navigation', name: 'customerTypeCode',fixed:true,editable: true, width:200,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Segment', name: 'segmentId',fixed:true, width:80,editable: true, edittype:"select",formatter:'select', editoptions: {value:getSegment(),maxlength: 100} },
+                   { label: 'Territory', name: 'territoryId',fixed:true ,width:80,editable: true, edittype:"select",formatter:'select', editoptions: {value:getTerritory(),maxlength: 100} }
                    //{ label: 'Insert UserId', name: 'insertUserId',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
                    //{ label: 'Insert Timestamp', name: 'insertTimestamp',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
                    //{ label: 'Update UserId', name: 'updateUserId',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
