--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center">
-    <h4 class="display-5">Product</h4>
+    <h4 class="display-5">Product Liquor</h4>
 </div>
 <body>
     <div class="searchInput2"> 
@@ -54,8 +54,9 @@
                     },
                    { label: 'Product SKU',name: 'sku',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
 
-			       { label: 'Product Name',name: 'description',fixed:true,width:150, editable: true, edittype:"text", editoptions: { maxlength: 150}, editrules: { required: true }},
-                    { label: 'Product Name 2', name: 'description2', fixed: true, width: 150, editable: true, edittype: "text", editoptions: { maxlength: 150 }, editrules: { required: true } },
+                    { label: 'Product Name', name: 'description', fixed: true, width: 300, editable: true, edittype: "text", editoptions: { maxlength: 150 }, editrules: { required: true } },
+
+                    { label: 'Product Name 2', name: 'description2', fixed: true, width: 300, editable: true, edittype: "text", editoptions: { maxlength: 150 }, editrules: { required: true } },
 
  			       { label: 'Product Id',name: 'productId',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
 
