--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Maintenance</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product Liquor</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="ProductCannabis" asp-action="Index">Product Cannabis</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
                             </div>
