--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -138,11 +138,11 @@
                 $.getJSON('SaDamageRecoup/DisplaySACode', function(data){
                 $("#saCode").val(data);
                 });
-                $.ajaxSetup( { "async": true } );
                },
                beforeSubmit :function (){
                var currentDate = $("#date").val();
                var notes = $("#comments").val();
+               $.ajaxSetup({ "async": false });
                $.getJSON('SaDamageRecoup/CreateHeader?data='+currentDate+'/'+notes, function(){});
                $.ajaxSetup( { "async": true } );
                },
