--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -183,6 +183,7 @@
                success: function (data) {
                    if(data!=null)
                    {
+                      console.log(data);
                       header= true;
                       $("#saCode").val(data.sacode);
                       $("#date").val(data.date);
