--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,20 +51,20 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="SaStockReceived" asp-action="Index">Stock Received</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
+@*                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cannabis</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="CannabisOrderEntry" asp-action="Index">Cannabis Order Entry</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="CannabisCustSumm" asp-action="Index">Cannabis Customer Summary</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="ReceivedCannabisOrder" asp-action="Index">Receive Order exceptions</a>
                             </div>
-                        </li>
+                        </li>*@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Maintenance</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product Liquor</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="ProductCannabis" asp-action="Index">Product Cannabis</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
+@*                                <a class="dropdown-item" asp-area="" asp-controller="ProductCannabis" asp-action="Index">Product Cannabis</a>*@
                                 <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
                             </div>
                         </li>
