--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -162,8 +162,9 @@
                    if(data!=null)
                    {
                       header= true;
+                        var date = data.date.split("T");
                       $("#saCode").val(data.sacode);
-                      $("#date").val(data.date);
+                      $("#date").val(date[0]);
                       $("#comments").val(data.comments);
                       $("#locationsDropdown").val(data.location);
                    }
