--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -225,8 +225,9 @@
                  if(data!=null)
                  {
                   header= true;
+                        var date = data.date.split("T");
                   $("#saCode").val(data.sacode);
-                  $("#date").val(data.date);
+                  $("#date").val(date[0]);
                   $("#comments").val(data.comments);
                   $("#fromLocationsDropdown").val(data.fromLocation);
                   $("#truckingComp").val(data.truckingCompany);
