--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -203,8 +203,9 @@
                    if(data!=null)
                    {
                       header= true;
+                        var date = data.date.split("T");
                       $("#saCode").val(data.sacode);
-                      $("#date").val(data.date);
+                      $("#date").val(date[0]);
                       $("#comments").val(data.comments);
                       $("#toLocationsDropdown").val(data.toLocation);
                       $("#fromLocationsDropdown").val(data.fromLocation);
