--- a/Views/SaStockReceived/Index.cshtml
+++ b/Views/SaStockReceived/Index.cshtml
@@ -253,8 +253,9 @@ $(document).ready(function () {
                      if(data!=null)
                      {
                       header= true;
+                        var date = data.date.split("T");
                       $("#saCode").val(data.sacode);
-                      $("#date").val(data.date);
+                      $("#date").val(date[0]);
                       $("#comments").val(data.comments);
                       $("#truckingCompanyDropdown").val(data.truckingCompanyDropdown);
                       $("#sealNo").val(data.sealNo);
