--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -122,8 +122,8 @@
                                         }
                         }
                     },
-                    { label: 'Customer Order Detail Id', name: 'customerOrderDtlsID', hidden: true, editable: true, editoptions: { readonly: 'readonly' }, key: true },
-                    { label: 'Customer Order Id', name: 'customerOrderID', hidden: true, editable: true, editoptions: { readonly: 'readonly' } },
+                    { label: 'Customer Order Detail Id', name: 'customerOrderDetailId', hidden: true, editable: true, editoptions: { readonly: 'readonly' }, key: true },
+                    { label: 'Customer Order Id', name: 'customerOrderDetailId', hidden: true, editable: true, editoptions: { readonly: 'readonly' } },
                     {
                         label: 'Product Desc', name: 'productDesc', fixed: true, width: 300, editable: true, editrules: { required: true, custom: true, custom_func: IsProduct },
                         editoptions: {
