--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -97,8 +97,8 @@
                             delOptions: { url: 'CustomerOrder/Delete' }
                         }
                     },
-                   { label: 'Customer Order Detail Id',name: 'customerOrderDetailID', editable: true,hidden:true,editoptions: { readonly: 'readonly'},key: true},
-                   { label: 'Customer Order Id',name: 'customerOrderID', hidden:true,editable: true,editoptions: { readonly: 'readonly'}},
+                    { label: 'Customer Order Detail Id', name: 'customerOrderDetailId', editable: true, editoptions: { readonly: 'readonly' }, key: true },
+                    { label: 'Customer Order Id', name: 'customerOrderDetailId', hidden: true, editable: true, editoptions: { readonly: 'readonly' } },
                    { label: 'Product Desc',name: 'productDesc',fixed:true,width:150,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: { 
                     dataInit: function(elem) {
