--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -88,14 +88,14 @@
                     name = $('#supplierDropdown').val();
                     $(elem).select();
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
-                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
-                    $('input#supplierName').val(getSupplierNames(ui.item.value));
+                    //$('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                    //$('input#supplierName').val(getSupplierNames(ui.item.value));
                     $('#saDamageRecoup').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
                     $('input#productSku').val(getProductSku(ui.item.value));
                     } });   
                     }
                    }},
-                   { label: 'Supplier',name: 'supplierName',fixed:true,width:250,editable:true, editoptions: {readonly: 'readonly'}},
+                   //{ label: 'Supplier',name: 'supplierName',fixed:true,width:250,editable:true, editoptions: {readonly: 'readonly'}},
                    { label: 'Product SKU',name: 'productSku',fixed:true,width:85,editable:true , editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'ADJ Amount (+/-)',name: 'amount',fixed:true,width:85,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
