--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -76,7 +76,7 @@
                             delOptions: { url: 'InvAdj/Delete' }
                         }
                     },
-                    { label: 'Inventory Tx Detail Id', name: 'inventoryTxDetailId', fixed: true, width: 85, editable: true, editoptions: { readonly: 'readonly' }, key: true },
+                    { label: 'Inventory Tx Detail Id', name: 'inventoryTxDetailId',hidden: true ,editable: true, editoptions: { readonly: 'readonly' }, key: true },
                    { label: 'InventoryTxTypeId',name: 'inventoryTxTypeId',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'SA Code',name: 'saCode',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Date',name: 'date',fixed:true,hidden:true, edittype:"text",editoptions: { readonly: 'readonly'}},
